# pingram

./: .gitignore  LICENSE  README.md  dev.fut  devcopy.fut  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/pingram/: __init__.py  pingram.py
src/pingram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_get_me.py  test_send_audio.py  test_send_doc.py  test_send_message.py  test_send_photo.py  test_send_video.py
